@startuml

package "Zookeeper" #DDDDDD {
    class RegisterCenter
    interface IRegisterCenter4Provider {
    + void registerProvider(final List<ProviderService> serviceMetaData)
    + Map<String, List<ProviderService>> getProviderServiceMap()
    }
    interface IRegisterCenter4Invoker {
    + void initProviderMap(String remoteAppKey, String groupName)
    + Map<String, List<ProviderService>> getServiceMetaDataMap4Consumer()
    + void registerInvoker(final InvokerService invoker)
    }
}


package "model" #DDDDDD {
    class ProviderService

    class InvokerService

    class PropertyConfigHelper

    class RpcRequest

    class RpcResponse

    class RpcResponseWrapper {
    - BlockingQueue<RpcResponse> responseQueue
    - long responseTime
    }

    RpcResponse <|.. RpcResponseWrapper
}

package "provider" #DDDDDD {
    class NettyServer {
    + void start(final int port)
    + void stop()
    }

    class NettyServerInvokeHandler {
    + void channelReadComplete(ChannelHandlerContext ctx)
    + exceptionCaught(ChannelHandlerContext ctx, Throwable cause)
    void channelRead0(ChannelHandlerContext ctx, RpcRequest rpcRequest)
    }
}

package "Invoker" #DDDDDD {
    class NettyChannelPoolFactory {
    + void initChannelPoolFactory()
    + ArrayBlockingQueue<Channel> acquire(InetSocketAddress socketAddress
    + void release()
    + Channel registerChannel(InetSocketAddress socketAddress)
    }

    class NettyClientInvokeHandler {

    }

    class InvokerProxyBeanFactory {
    + Object invoke(Object proxy, Method method, Object[] args)
    }

    class InvokerResponseHolder {
    + static void initResponseData(String requestUniqueKey)
    + static void putResultValue(RpcResponse response)
    + static RpcResponse getValue(String requestUniqueKey, long timeout)
    }

    class InvokerServiceCallable {
    + RpcResponse call()
    }
}

ProviderService <|.. InvokerProxyBeanFactory
RpcRequest <|.. InvokerProxyBeanFactory
RpcResponse <|.. InvokerProxyBeanFactory
IRegisterCenter4Invoker <|.. InvokerProxyBeanFactory
RegisterCenter <|.. InvokerProxyBeanFactory

ProviderService <|.. NettyChannelPoolFactory
RpcResponse <|.. NettyChannelPoolFactory
NettyDecoderHandler <|.. NettyChannelPoolFactory
NettyEncoderHandler <|.. NettyChannelPoolFactory
NettyClientInvokeHandler <|.. NettyChannelPoolFactory

SimpleChannelInboundHandler <|-- NettyClientInvokeHandler

RpcResponse <|.. InvokerResponseHolder
RpcResponseWrapper <|.. InvokerResponseHolder

RpcRequest <|.. InvokerResponseHolder
RpcResponse <|.. InvokerResponseHolder


class NettyDecoderHandler {
}

class NettyEncoderHandler {
}




RpcRequest <|.. NettyServerInvokeHandler
RpcResponse <|.. NettyServerInvokeHandler

SimpleChannelInboundHandler <|-- NettyServerInvokeHandler

NettyServerInvokeHandler <|.. NettyServer
NettyDecoderHandler <|.. NettyServer
NettyEncoderHandler <|.. NettyServer



@enduml